--- a/src/Components/Page/Profile/Profile.css
+++ b/src/Components/Page/Profile/Profile.css
@@ -63,6 +63,7 @@
     justify-content: flex-start;
     background-color: #fff;
     border-radius: 5px;
+    flex-wrap: wrap;
 }
 
 .description-user{
@@ -77,7 +78,15 @@
     font-size: 23px;
     font-weight: bolder ;
 }
+/* password content */
 
+.recovery-password-container{
+    width: 600px;
+    height: 500px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 1px 5px 11px -2px #1a1919;
+}
 
 /* end profile */
 
