--- a/src/Components/Layout/HomeSection/HomeSection.css
+++ b/src/Components/Layout/HomeSection/HomeSection.css
@@ -90,6 +90,8 @@
 .rent-text-title{
     font-size: 120%;
     font-weight: bolder;
+    color: rgb(37,46,53);
+    
 }
 
 .rent-info-text{
@@ -141,6 +143,7 @@
     .rent-text-title{
         font-size: 100%;
         font-weight: bolder;
+        
     }
 
     .rent-info-text{
