--- a/src/Components/Layout/MostRecent/MostRecent.css
+++ b/src/Components/Layout/MostRecent/MostRecent.css
@@ -7,6 +7,7 @@
 .most-recent-title{
     text-align: center;
     margin-bottom: 0.5em;
+    color: rgb(37,46,53);
 }
 
 @media screen and (max-width: 860px){
